--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,13 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
      package="org.me.getphonelocation">
     <application>
-         <activity android:name=".MainActivity" android:label="MainActivity">
+         <activity android:name=".PhoneLocation" android:label="GetPhoneLocation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="PhoneLocation"/>
+        <activity android:name="MainActivity"/>
     </application>
      <uses-permission android:name="android.permission.INTERNET">
  </uses-permission> 
